syntax = "proto3";

package gridGame;

option go_package = "github.com/amagana8/trivia-games/backend/pkg/pb";

service GridGameService {
    rpc CreateGridGame(CreateGridGameRequest) returns (GridGame);
    rpc GetGridGame(GridGameId) returns (GridGame);
    rpc GetAllGridGames(GetAllGridGamesRequest) returns (GetAllGridGamesResponse);
    rpc UpdateGridGame(UpdateGridGameRequest) returns (GridGame);
    rpc DeleteGridGame(GridGameId) returns (DeleteGridGameResponse);
}

message Column {
    string category = 1;
    repeated string questions = 2;
}

message GridGame {
    string id = 1;
    string authorId = 2;
    string title = 3;
    repeated Column grid = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message CreateGridGameRequest {
    string authorId = 1;
    string title = 2;
    repeated Column grid = 3;
}

message UpdateGridGameRequest {
    string id = 1;
    string title = 2;
    repeated Column grid = 3;
}

message GridGameId {
    string id = 1;
}

message GetAllGridGamesRequest {}

message GetAllGridGamesResponse {
    repeated GridGame gridGames = 1;
}

message DeleteGridGameResponse {}
