syntax = "proto3";

package user;

option go_package = "github.com/amagana8/trivia-games/backend/pkg/pb";

service UserService {
    rpc signUp(SignUpRequest) returns (SignInResponse);
    rpc signIn(SignInRequest) returns (SignInResponse);
    rpc changePassword(ChangePasswordRequest) returns (SignInResponse);
    rpc refreshToken(RefreshTokenRequest) returns (SignInResponse);
    rpc getMe(GetMeRequest) returns (GetMeResponse);
}

message SignUpRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignInResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message ChangePasswordRequest {
    string userId = 1;
    string newPassword = 2;
}

message RefreshTokenRequest {
    string refreshToken = 1;
}

message GetMeRequest {
    string userId = 1;
}

message GetMeResponse {
    string userId = 1;
    string username = 2;
    string email = 3;
    repeated string questions = 4;
    repeated string games = 5;
}
